--- a/rubric_rm/verl/process_data/orm.ipynb
+++ b/rubric_rm/verl/process_data/orm.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/xiusic/anaconda3/envs/RubricRM/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from datasets import load_dataset"
    ]
@@ -76177,19 +76186,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = load_dataset(\"gaotang/entire_orm_guideline\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "record = defaultdict(float)\n",
+    "for item in a['train']:\n",
+    "    record[float(item['winner'][1])] += 1 \n",
+    "\n",
+    "# sums = sum(list(record.values))\n",
+    "# print({i : (j / sums) for i, j in record.items()} )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0.5: 0.44906628090478695, 0.8: 0.24460810099947397, 1.0: 0.3063256180957391}\n"
+     ]
+    }
+   ],
+   "source": [
+    "sums = sum(list(record.values()))\n",
+    "print({i : (j / sums) for i, j in record.items()} )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating train split: 100%|██████████| 76040/76040 [00:03<00:00, 22210.70 examples/s]\n"
+      "Generating train split: 100%|██████████| 55693/55693 [00:02<00:00, 24091.09 examples/s]\n"
      ]
     }
    ],
    "source": [
-    "a = load_dataset(\"gaotang/entire_orm_guideline\")"
+    "b = load_dataset(\"gaotang/filtered_orm_guideline\")\n",
+    "for item in b['train']:\n",
+    "    user_content = item['context_messages'][1]['content'] \n",
+    "    if 'im_start' in user_content or 'im_end' in user_content:\n",
+    "        print(\"yes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for item in a['train']:\n",
+    "    user_content = item['context_messages'][1]['content'] \n",
+    "    if 'im_start' in user_content or 'im_end' in user_content:\n",
+    "        print(\"yes\")"
    ]
   },
   {
