--- a/rubric_rm/verl/utils/reward_score/format_test.ipynb
+++ b/rubric_rm/verl/utils/reward_score/format_test.ipynb
@@ -140,6 +140,410 @@
     "print(\"BAD2->\", validate_string_format(example_bad_2))  # False\n",
     "print(\"BAD3->\", validate_string_format(example_bad_3))  # False\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 1: Expected=True, Got=True -> PASS\n",
+      "Test 2: Expected=True, Got=True -> PASS\n",
+      "Test 3: Expected=True, Got=True -> PASS\n",
+      "Test 4: Expected=False, Got=False -> PASS\n",
+      "Test 5: Expected=False, Got=False -> PASS\n",
+      "Test 6: Expected=False, Got=False -> PASS\n",
+      "Test 7: Expected=False, Got=False -> PASS\n",
+      "Test 8: Expected=False, Got=False -> PASS\n",
+      "Test 9: Expected=True, Got=True -> PASS\n",
+      "Test 10: Expected=False, Got=False -> PASS\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# 1. Define the Regex Pattern\n",
+    "pattern = re.compile(\n",
+    "    r'^'\n",
+    "    # Look for <rubric>...</rubric> with some content inside\n",
+    "    r'.*?<rubric>\\s*(\\S.*?\\S|\\S)\\s*</rubric>'\n",
+    "    # Look for <eval>...</eval> containing:\n",
+    "    #   - either <quote_A>...</quote_A> or <summary_A>...</summary_A>\n",
+    "    #   - AND either <quote_B>...</quote_B> or <summary_B>...</summary_B>\n",
+    "    r'.*?<eval>\\s*'\n",
+    "        r'(?=.*?(?:<quote_A>.*?</quote_A>|<summary_A>.*?</summary_A>))'\n",
+    "        r'(?=.*?(?:<quote_B>.*?</quote_B>|<summary_B>.*?</summary_B>))'\n",
+    "        r'(.*?)'  # Capture the <eval> content\n",
+    "    r'\\s*</eval>'\n",
+    "    # Finally look for <answer>...</answer> with some content\n",
+    "    r'.*?<answer>\\s*(\\S.*?\\S|\\S)\\s*</answer>'\n",
+    "    r'.*?$',\n",
+    "    re.DOTALL\n",
+    ")\n",
+    "\n",
+    "# 2. Define Test Cases (each case has: input_text, expected_validity)\n",
+    "test_cases = [\n",
+    "    (\"\"\"\n",
+    "<rubric>Rubric content</rubric>\n",
+    "<eval>\n",
+    "Some evaluation mentioning <quote_A>Verbatim A</quote_A> and <quote_B>Verbatim B</quote_B>.\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\", True),\n",
+    "\n",
+    "    (\"\"\"\n",
+    "<rubric>Some rubric info</rubric>\n",
+    "<eval>\n",
+    "I found that <summary_A>A paraphrased snippet</summary_A> was correct,\n",
+    "but <quote_B>Explicit text from B</quote_B> had issues.\n",
+    "</eval>\n",
+    "<answer>[[B]]</answer>\n",
+    "\"\"\", True),\n",
+    "\n",
+    "    (\"\"\"\n",
+    "<rubric>\n",
+    "1. Accuracy\n",
+    "2. Completeness\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "Here is my evaluation:\n",
+    "- <quote_A>Direct quote from A</quote_A>\n",
+    "- <summary_B>B was paraphrased well</summary_B>\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\", True),\n",
+    "\n",
+    "    # Invalid - No A reference:\n",
+    "    (\"\"\"\n",
+    "<rubric>Rubric is here</rubric>\n",
+    "<eval>\n",
+    "I only mention <quote_B>Stuff from B</quote_B> and no A references.\n",
+    "</eval>\n",
+    "<answer>[[B]]</answer>\n",
+    "\"\"\", False),\n",
+    "\n",
+    "    # Invalid - No B reference:\n",
+    "    (\"\"\"\n",
+    "<rubric>Rubric is here</rubric>\n",
+    "<eval>\n",
+    "I only mention <summary_A>Paraphrase of A</summary_A> and no B references.\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\", False),\n",
+    "\n",
+    "    # Invalid - Missing <rubric>:\n",
+    "    (\"\"\"\n",
+    "<eval>\n",
+    "<quote_A>Something A</quote_A>\n",
+    "<quote_B>Something B</quote_B>\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\", False),\n",
+    "\n",
+    "    # Invalid - Missing <eval>:\n",
+    "    (\"\"\"\n",
+    "<rubric>Rubric is here</rubric>\n",
+    "<answer>[[B]]</answer>\n",
+    "\"\"\", False),\n",
+    "\n",
+    "    # Invalid - Missing <answer>:\n",
+    "    (\"\"\"\n",
+    "<rubric>Rubric text</rubric>\n",
+    "<eval>\n",
+    "<quote_A>A text</quote_A>\n",
+    "<quote_B>B text</quote_B>\n",
+    "</eval>\n",
+    "\"\"\", False),\n",
+    "\n",
+    "    # Valid - Multiple references:\n",
+    "    (\"\"\"\n",
+    "<rubric>Some rubric details</rubric>\n",
+    "<eval>\n",
+    "Points:\n",
+    "1) <quote_A>A snippet #1</quote_A>\n",
+    "2) <summary_A>A snippet #2 (summary)</summary_A>\n",
+    "3) <quote_B>B snippet #1</quote_B>\n",
+    "4) <summary_B>B snippet #2 (summary)</summary_B>\n",
+    "</eval>\n",
+    "<answer>[[B]]</answer>\n",
+    "\"\"\", True),\n",
+    "\n",
+    "    # Invalid - No references inside <eval> at all:\n",
+    "    (\"\"\"\n",
+    "<rubric>Rubric stuff</rubric>\n",
+    "<eval>\n",
+    "No mention of A or B here at all.\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\", False),\n",
+    "]\n",
+    "\n",
+    "# 3. Test Each Case\n",
+    "for i, (test_input, expected) in enumerate(test_cases, start=1):\n",
+    "    match = bool(pattern.match(test_input.strip()))\n",
+    "    result = \"PASS\" if match == expected else \"FAIL\"\n",
+    "    print(f\"Test {i}: Expected={expected}, Got={match} -> {result}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 1 - Valid minimal structure: Expected=True, Got=True -> PASS\n",
+      "Test 2 - Valid example using summary tags: Expected=True, Got=True -> PASS\n",
+      "Test 3 - No <justify> inside <rubric>: Expected=False, Got=False -> PASS\n",
+      "Test 4 - Empty justification: Expected=False, Got=False -> PASS\n",
+      "Test 5 - No Chatbot A reference: Expected=False, Got=False -> PASS\n",
+      "Test 6 - No Chatbot B reference: Expected=False, Got=False -> PASS\n",
+      "Test 7 - Empty <quote_A>: Expected=False, Got=False -> PASS\n",
+      "Test 8 - No <answer> section: Expected=False, Got=False -> PASS\n",
+      "Test 9 - Empty <answer>: Expected=False, Got=False -> PASS\n",
+      "Test 10 - Valid example with multiple references: Expected=True, Got=True -> PASS\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def get_pattern():\n",
+    "    \"\"\"\n",
+    "    Returns a compiled regex pattern that enforces:\n",
+    "    1) <rubric> must contain non-empty <justify>...</justify>\n",
+    "    2) <eval> must contain at least one non-empty reference to A and to B\n",
+    "    3) <answer> must contain non-empty content\n",
+    "    \"\"\"\n",
+    "    pattern = re.compile(\n",
+    "        r'^'\n",
+    "        # 1) <rubric> ... </rubric>, containing <justify> with non-empty text\n",
+    "        r'.*?<rubric>'\n",
+    "        r'(?=.*?<justify>\\s*\\S.*?\\S\\s*</justify>)'  # Lookahead ensures <justify> is non-empty\n",
+    "        r'(.*?)'\n",
+    "        r'</rubric>'\n",
+    "        \n",
+    "        # 2) <eval> ... </eval>, must contain references to A and B with non-empty text\n",
+    "        r'.*?<eval>'\n",
+    "        # Chatbot A reference: either <quote_A>...</quote_A> or <summary_A>...</summary_A>, both non-empty\n",
+    "        r'(?=.*?(?:<quote_A>\\s*\\S.*?\\S\\s*</quote_A>|<summary_A>\\s*\\S.*?\\S\\s*</summary_A>))'\n",
+    "        # Chatbot B reference: either <quote_B>...</quote_B> or <summary_B>...</summary_B>, both non-empty\n",
+    "        r'(?=.*?(?:<quote_B>\\s*\\S.*?\\S\\s*</quote_B>|<summary_B>\\s*\\S.*?\\S\\s*</summary_B>))'\n",
+    "        r'(.*?)'\n",
+    "        r'</eval>'\n",
+    "        \n",
+    "        # 3) <answer> ... </answer> with non-empty text\n",
+    "        r'.*?<answer>\\s*(\\S.*?\\S|\\S)\\s*</answer>'\n",
+    "        r'.*$',\n",
+    "        re.DOTALL\n",
+    "    )\n",
+    "    return pattern\n",
+    "\n",
+    "def test_pattern():\n",
+    "    \"\"\"\n",
+    "    Tests the pattern against a series of valid and invalid cases,\n",
+    "    printing pass/fail results.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    pattern = get_pattern()\n",
+    "\n",
+    "    test_cases = [\n",
+    "        # 1. VALID: minimal structure, non-empty <justify>, references to A and B, non-empty <answer>\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  Rubric item 1\n",
+    "  <justify>This rubric item is justified because ...</justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  Here is my analysis.\n",
+    "  <quote_A>Sample text from A</quote_A>\n",
+    "  <quote_B>Sample text from B</quote_B>\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\",\n",
+    "            True,\n",
+    "            \"Valid minimal structure\"\n",
+    "        ),\n",
+    "        \n",
+    "        # 2. VALID: using <summary_A> and <summary_B>, ensuring non-empty justification\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  1. Accuracy\n",
+    "  2. Relevance\n",
+    "  <justify>\n",
+    "    We need these criteria to ensure the answer is factually correct and addresses the question.\n",
+    "  </justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  Based on the content:\n",
+    "  <summary_A>A was concise but accurate.</summary_A>\n",
+    "  <summary_B>B provided more detail, which was relevant.</summary_B>\n",
+    "</eval>\n",
+    "<answer>[[B]]</answer>\n",
+    "\"\"\",\n",
+    "            True,\n",
+    "            \"Valid example using summary tags\"\n",
+    "        ),\n",
+    "        \n",
+    "        # 3. INVALID: Missing <justify> entirely\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  Just some rubric content, but no justify section\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_A>A text</quote_A>\n",
+    "  <quote_B>B text</quote_B>\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\",\n",
+    "            False,\n",
+    "            \"No <justify> inside <rubric>\"\n",
+    "        ),\n",
+    "        \n",
+    "        # 4. INVALID: Empty <justify> (only whitespace)\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  My rubric item\n",
+    "  <justify>    </justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_A>Not empty</quote_A>\n",
+    "  <quote_B>Not empty</quote_B>\n",
+    "</eval>\n",
+    "<answer>[[B]]</answer>\n",
+    "\"\"\",\n",
+    "            False,\n",
+    "            \"Empty justification\"\n",
+    "        ),\n",
+    "        \n",
+    "        # 5. INVALID: No references to Chatbot A in <eval>\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  Some rubric item\n",
+    "  <justify>This is a justification</justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_B>Reference to B</quote_B>\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\",\n",
+    "            False,\n",
+    "            \"No Chatbot A reference\"\n",
+    "        ),\n",
+    "        \n",
+    "        # 6. INVALID: No references to Chatbot B in <eval>\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  Some rubric item\n",
+    "  <justify>Justification is here</justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <summary_A>A summary text</summary_A>\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\",\n",
+    "            False,\n",
+    "            \"No Chatbot B reference\"\n",
+    "        ),\n",
+    "        \n",
+    "        # 7. INVALID: One reference is empty\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  My rubric\n",
+    "  <justify>Justified rubric</justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_A>    </quote_A>   <!-- This is effectively empty, just whitespace -->\n",
+    "  <quote_B>Some B content</quote_B>\n",
+    "</eval>\n",
+    "<answer>[[B]]</answer>\n",
+    "\"\"\",\n",
+    "            False,\n",
+    "            \"Empty <quote_A>\"\n",
+    "        ),\n",
+    "        \n",
+    "        # 8. INVALID: Missing <answer> block\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  Some rubric\n",
+    "  <justify>Some justification</justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_A>Some A text</quote_A>\n",
+    "  <quote_B>Some B text</quote_B>\n",
+    "</eval>\n",
+    "\"\"\",\n",
+    "            False,\n",
+    "            \"No <answer> section\"\n",
+    "        ),\n",
+    "        \n",
+    "        # 9. INVALID: <answer> block is empty\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  Another rubric\n",
+    "  <justify>We justify the rubric here</justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_A>Verbatim A text</quote_A>\n",
+    "  <quote_B>Verbatim B text</quote_B>\n",
+    "</eval>\n",
+    "<answer></answer>\n",
+    "\"\"\",\n",
+    "            False,\n",
+    "            \"Empty <answer>\"\n",
+    "        ),\n",
+    "        \n",
+    "        # 10. VALID: Multiple references, multiline justification, everything present\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  1. Clarity\n",
+    "  2. Accuracy\n",
+    "  3. Relevance\n",
+    "  <justify>\n",
+    "    These criteria are critical: we want correct, clear, and on-topic answers.\n",
+    "    We also want them to be well-presented.\n",
+    "  </justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_A>\n",
+    "    A's response line 1\n",
+    "    A's response line 2\n",
+    "  </quote_A>\n",
+    "  <summary_B>B gave a more thorough background, but was slightly off-topic.</summary_B>\n",
+    "  Conclusion: A might be better.\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\",\n",
+    "            True,\n",
+    "            \"Valid example with multiple references\"\n",
+    "        ),\n",
+    "    ]\n",
+    "\n",
+    "    # Test each case\n",
+    "    for i, (text, expected, description) in enumerate(test_cases, start=1):\n",
+    "        match_found = bool(pattern.match(text.strip()))\n",
+    "        result = \"PASS\" if match_found == expected else \"FAIL\"\n",
+    "        print(f\"Test {i} - {description}: Expected={expected}, Got={match_found} -> {result}\")\n",
+    "\n",
+    "# If you want to run it right away, just uncomment:\n",
+    "test_pattern()\n"
+   ]
   }
  ],
  "metadata": {
