--- a/rubric_rm/verl/utils/reward_score/format_test.ipynb
+++ b/rubric_rm/verl/utils/reward_score/format_test.ipynb
@@ -544,6 +544,252 @@
     "# If you want to run it right away, just uncomment:\n",
     "test_pattern()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def get_pattern():\n",
+    "    \"\"\"\n",
+    "    Returns the compiled regex pattern enforcing:\n",
+    "    1) <rubric> with at least one non-whitespace char,\n",
+    "       and a non-empty <justify> inside it.\n",
+    "    2) <eval> referencing Chatbot A and B at least once each with non-empty content.\n",
+    "    3) <answer> with non-empty text.\n",
+    "    \"\"\"\n",
+    "    pattern = re.compile(\n",
+    "        r'^'\n",
+    "        # --- 1) <rubric> ... </rubric> ---\n",
+    "        r'.*?<rubric>'\n",
+    "        # Lookahead #1: ensure <rubric> block has at least one non-whitespace character\n",
+    "        r'(?=.*?\\S)'\n",
+    "        # Lookahead #2: ensure there's a <justify> with non-empty text inside <rubric>\n",
+    "        r'(?=.*?<justify>\\s*\\S.*?\\S\\s*</justify>)'\n",
+    "        # Actually match/capture the <rubric> content (non-greedy)\n",
+    "        r'(.*?)'\n",
+    "        r'</rubric>'\n",
+    "\n",
+    "        # --- 2) <eval> ... </eval> ---\n",
+    "        r'.*?<eval>'\n",
+    "        # Lookahead #1: must have non-empty reference to Chatbot A\n",
+    "        r'(?=.*?(?:<quote_A>\\s*\\S.*?\\S\\s*</quote_A>|<summary_A>\\s*\\S.*?\\S\\s*</summary_A>))'\n",
+    "        # Lookahead #2: must have non-empty reference to Chatbot B\n",
+    "        r'(?=.*?(?:<quote_B>\\s*\\S.*?\\S\\s*</quote_B>|<summary_B>\\s*\\S.*?\\S\\s*</summary_B>))'\n",
+    "        # Actually match/capture the <eval> content (non-greedy)\n",
+    "        r'(.*?)'\n",
+    "        r'</eval>'\n",
+    "\n",
+    "        # --- 3) <answer> ... </answer> ---\n",
+    "        # Must have non-empty content inside <answer> tags\n",
+    "        r'.*?<answer>\\s*(\\S.*?\\S|\\S)\\s*</answer>'\n",
+    "        r'.*$',\n",
+    "        re.DOTALL\n",
+    "    )\n",
+    "    return pattern\n",
+    "\n",
+    "\n",
+    "def test_pattern():\n",
+    "    \"\"\"\n",
+    "    Tests the regex pattern against various valid and invalid cases,\n",
+    "    printing pass/fail results for each one.\n",
+    "    \"\"\"\n",
+    "    pattern = get_pattern()\n",
+    "\n",
+    "    test_cases = [\n",
+    "        # ========== VALID Cases ==========\n",
+    "\n",
+    "        # 1. Minimal valid structure\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  Rubric item\n",
+    "  <justify>We justify the rubric</justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_A>Some text from A</quote_A>\n",
+    "  <quote_B>Some text from B</quote_B>\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\",\n",
+    "            True,\n",
+    "            \"Minimal valid structure with non-empty rubric, justify, A & B references, and answer\"\n",
+    "        ),\n",
+    "\n",
+    "        # 2. Uses summary for A, quote for B; multiline justification\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  Rubric item 1\n",
+    "  Rubric item 2\n",
+    "  <justify>\n",
+    "    This is a multiline\n",
+    "    justification for the rubric.\n",
+    "  </justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  Here is an evaluation.\n",
+    "  <summary_A>A was concise but correct.</summary_A>\n",
+    "  Some extra text ...\n",
+    "  <quote_B>Exact words from B here</quote_B>\n",
+    "</eval>\n",
+    "<answer>[[B]]</answer>\n",
+    "\"\"\",\n",
+    "            True,\n",
+    "            \"Valid: summary_A and quote_B used, non-empty justification\"\n",
+    "        ),\n",
+    "\n",
+    "        # 3. Multiple references, demonstrates everything is present\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  1) Accuracy\n",
+    "  2) Relevance\n",
+    "  <justify>\n",
+    "    These criteria ensure correctness and focus.\n",
+    "  </justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_A>A said something detailed</quote_A>\n",
+    "  <summary_B>B gave a broader context</summary_B>\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\",\n",
+    "            True,\n",
+    "            \"Valid: multiple references, clear rubric, justification, answer\"\n",
+    "        ),\n",
+    "\n",
+    "        # ========== INVALID Cases ==========\n",
+    "\n",
+    "        # 4. Missing <justify> entirely in <rubric>\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  Rubric item 1\n",
+    "  Rubric item 2\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_A>Text A</quote_A>\n",
+    "  <quote_B>Text B</quote_B>\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\",\n",
+    "            False,\n",
+    "            \"Invalid: no <justify> tag inside <rubric>\"\n",
+    "        ),\n",
+    "\n",
+    "        # 5. Empty <justify> (only whitespace)\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  Some rubric text\n",
+    "  <justify>   </justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_A>A reference</quote_A>\n",
+    "  <quote_B>B reference</quote_B>\n",
+    "</eval>\n",
+    "<answer>[[B]]</answer>\n",
+    "\"\"\",\n",
+    "            False,\n",
+    "            \"Invalid: <justify> is empty/whitespace only\"\n",
+    "        ),\n",
+    "\n",
+    "        # 6. Rubric is minimal, but <justify> is non-empty -> Valid\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  <justify>Non-empty justification</justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_A>A text</quote_A>\n",
+    "  <quote_B>B text</quote_B>\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\",\n",
+    "            True,\n",
+    "            \"Valid: minimal rubric but with non-empty <justify>, valid references, and answer\"\n",
+    "        ),\n",
+    "\n",
+    "        # 7. No references to Chatbot A\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  1) Some rubric\n",
+    "  <justify>This is a justification.</justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_B>Text from B</quote_B>\n",
+    "</eval>\n",
+    "<answer>[[B]]</answer>\n",
+    "\"\"\",\n",
+    "            False,\n",
+    "            \"Invalid: no reference to A in <eval>\"\n",
+    "        ),\n",
+    "\n",
+    "        # 8. No references to Chatbot B\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  Some rubric item\n",
+    "  <justify>We justify the rubric here</justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_A>Text from A</quote_A>\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\",\n",
+    "            False,\n",
+    "            \"Invalid: no reference to B in <eval>\"\n",
+    "        ),\n",
+    "\n",
+    "        # 9. Empty <quote_A> and valid <quote_B>\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  Some rubric\n",
+    "  <justify>Justification text</justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_A>   </quote_A>\n",
+    "  <quote_B>Valid text from B</quote_B>\n",
+    "</eval>\n",
+    "<answer>[[A]]</answer>\n",
+    "\"\"\",\n",
+    "            False,\n",
+    "            \"Invalid: <quote_A> is only whitespace\"\n",
+    "        ),\n",
+    "\n",
+    "        # 10. Missing <answer> entirely\n",
+    "        (\n",
+    "            \"\"\"\n",
+    "<rubric>\n",
+    "  Some rubric content\n",
+    "  <justify>Non-empty justification</justify>\n",
+    "</rubric>\n",
+    "<eval>\n",
+    "  <quote_A>Some content from A</quote_A>\n",
+    "  <quote_B>Some content from B</quote_B>\n",
+    "</eval>\n",
+    "\"\"\",\n",
+    "            False,\n",
+    "            \"Invalid: No <answer> block\"\n",
+    "        ),\n",
+    "    ]\n",
+    "\n",
+    "    # Execution: match each test case against the pattern\n",
+    "    for i, (test_input, expected, description) in enumerate(test_cases, start=1):\n",
+    "        match_result = bool(pattern.match(test_input.strip()))\n",
+    "        result = \"PASS\" if match_result == expected else \"FAIL\"\n",
+    "        print(f\"Test {i} - {description}\\nExpected: {expected}, Got: {match_result} => {result}\\n\")\n",
+    "\n",
+    "\n",
+    "# Uncomment this line to run tests directly in a script:\n",
+    "test_pattern()\n"
+   ]
   }
  ],
  "metadata": {
