--- a/rubric_rm/verl/utils/reward_score/format_test.ipynb
+++ b/rubric_rm/verl/utils/reward_score/format_test.ipynb
@@ -64,6 +64,152 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def check_task_format(text: str) -> bool:\n",
+    "    chat_pattern = re.compile(\n",
+    "        r'^'\n",
+    "        r'.*?<type>\\s*Chat\\s*</type>'\n",
+    "        r'.*?<rubric>'\n",
+    "        r'(?=.*?\\S)'\n",
+    "        r'(?=.*?<justify>\\s*\\S.*?\\S\\s*</justify>)'\n",
+    "        r'(.*?)'\n",
+    "        r'</rubric>'\n",
+    "        r'.*?<eval>'\n",
+    "        r'(?=.*?(<quote_A>\\s*\\S.*?\\S\\s*</quote_A>|<summary_A>\\s*\\S.*?\\S\\s*</summary_A>))'\n",
+    "        r'(?=.*?(<quote_B>\\s*\\S.*?\\S\\s*</quote_B>|<summary_B>\\s*\\S.*?\\S\\s*</summary_B>))'\n",
+    "        r'(.*?)'\n",
+    "        r'</eval>'\n",
+    "        r'.*?<answer>\\s*(\\S.*?\\S|\\S)\\s*</answer>'\n",
+    "        r'.*$',\n",
+    "        re.DOTALL\n",
+    "    )\n",
+    "\n",
+    "    reasoning_pattern = re.compile(\n",
+    "        r'^'\n",
+    "        r'.*?<type>\\s*Reasoning\\s*</type>'\n",
+    "        r'.*?<solution>\\s*\\S.*?\\S\\s*</solution>'\n",
+    "        r'.*?<eval>'\n",
+    "        r'(?=.*?(<quote_A>\\s*\\S.*?\\S\\s*</quote_A>|<summary_A>\\s*\\S.*?\\S\\s*</summary_A>))'\n",
+    "        r'(?=.*?(<quote_B>\\s*\\S.*?\\S\\s*</quote_B>|<summary_B>\\s*\\S.*?\\S\\s*</summary_B>))'\n",
+    "        r'(.*?)'\n",
+    "        r'</eval>'\n",
+    "        r'.*?<answer>\\s*(\\S.*?\\S|\\S)\\s*</answer>'\n",
+    "        r'.*$',\n",
+    "        re.DOTALL\n",
+    "    )\n",
+    "\n",
+    "    return bool(chat_pattern.match(text)) or bool(reasoning_pattern.match(text))\n",
+    "\n",
+    "\n",
+    "def run_tests():\n",
+    "    test_cases = {\n",
+    "        \"valid_chat\": \"\"\"\n",
+    "            <type>Chat</type>\n",
+    "            <rubric>\n",
+    "                Fluency, relevance\n",
+    "                <justify>These are appropriate for open-ended dialogue</justify>\n",
+    "            </rubric>\n",
+    "            <eval>\n",
+    "                <quote_A>This is a good answer.</quote_A>\n",
+    "                <summary_B>Response was less relevant.</summary_B>\n",
+    "            </eval>\n",
+    "            <answer>[[A]]</answer>\n",
+    "        \"\"\",\n",
+    "\n",
+    "        \"valid_reasoning\": \"\"\"\n",
+    "            <type>Reasoning</type>\n",
+    "            <solution>42</solution>\n",
+    "            <eval>\n",
+    "                <quote_A>The answer is 42.</quote_A>\n",
+    "                <summary_B>B tried but made a mistake in step 2.</summary_B>\n",
+    "            </eval>\n",
+    "            <answer>[[A]]</answer>\n",
+    "        \"\"\",\n",
+    "\n",
+    "        \"missing_type\": \"\"\"\n",
+    "            <rubric>\n",
+    "                Quality\n",
+    "                <justify>Why not?</justify>\n",
+    "            </rubric>\n",
+    "            <eval>\n",
+    "                <quote_A>Nice.</quote_A>\n",
+    "                <quote_B>Not bad.</quote_B>\n",
+    "            </eval>\n",
+    "            <answer>[[A]]</answer>\n",
+    "        \"\"\",\n",
+    "\n",
+    "        \"chat_missing_justify\": \"\"\"\n",
+    "            <type>Chat</type>\n",
+    "            <rubric>\n",
+    "                Just some criteria\n",
+    "            </rubric>\n",
+    "            <eval>\n",
+    "                <quote_A>Okay.</quote_A>\n",
+    "                <quote_B>Better.</quote_B>\n",
+    "            </eval>\n",
+    "            <answer>[[B]]</answer>\n",
+    "        \"\"\",\n",
+    "\n",
+    "        \"reasoning_missing_solution\": \"\"\"\n",
+    "            <type>Reasoning</type>\n",
+    "            <eval>\n",
+    "                <quote_A>A is right</quote_A>\n",
+    "                <quote_B>B is wrong</quote_B>\n",
+    "            </eval>\n",
+    "            <answer>[[A]]</answer>\n",
+    "        \"\"\",\n",
+    "\n",
+    "        \"missing_references\": \"\"\"\n",
+    "            <type>Chat</type>\n",
+    "            <rubric>\n",
+    "                <justify>Fluency matters</justify>\n",
+    "            </rubric>\n",
+    "            <eval>\n",
+    "                No quote here.\n",
+    "            </eval>\n",
+    "            <answer>[[B]]</answer>\n",
+    "        \"\"\",\n",
+    "\n",
+    "        \"minimal_valid_chat\": \"\"\"\n",
+    "            <type>Chat</type>\n",
+    "            <rubric>\n",
+    "                helpfulness\n",
+    "                <justify>key for user-facing task</justify>\n",
+    "            </rubric>\n",
+    "            <eval>\n",
+    "                <summary_A>Good explanation.</summary_A>\n",
+    "                <quote_B>Not clear.</quote_B>\n",
+    "            </eval>\n",
+    "            <answer>[[A]]</answer>\n",
+    "        \"\"\",\n",
+    "\n",
+    "        \"minimal_valid_reasoning\": \"\"\"\n",
+    "            <type>Reasoning</type>\n",
+    "            <solution>the integral is 1</solution>\n",
+    "            <eval>\n",
+    "                <summary_A>Correct reasoning.</summary_A>\n",
+    "                <quote_B>Incorrect setup.</quote_B>\n",
+    "            </eval>\n",
+    "            <answer>[[A]]</answer>\n",
+    "        \"\"\"\n",
+    "    }\n",
+    "\n",
+    "    for name, content in test_cases.items():\n",
+    "        result = check_task_format(content)\n",
+    "        print(f\"{name:<25} => {'✅ Pass' if result else '❌ Fail'}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    run_tests()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
